Backported stream.toList() for java 11 compatibility